# setuptool

./: Makefile  README.md  setuptool.spec
src/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.in  setup.c  setuptool.d.h  setuptool.spec
src/po/: POTFILES.in  ar.po  as.po  ast.po  bal.po  be.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  fa.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it.po  ja.po  ka.po  kn.po  ko.po  ku.po  lo.po  lt.po  lv.po  (+32 more)
src/setuptool.d/: Makefile.am  Makefile.in
