AC_INIT(setuptool,1.19.11)
SPECVERSION=`grep ^Version: ${srcdir}/setuptool.spec | awk '{print $NF}'`
if test x$PACKAGE_VERSION != x$SPECVERSION ; then
	AC_MSG_ERROR([configure and setuptool.spec disagree on version!])
fi
AM_INIT_AUTOMAKE([foreign])

ALL_LINGUAS=`cd $srcdir/po ; echo *.po | sed s,.po,,g`

GETTEXT_PACKAGE=setup
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT
AC_PROG_INTLTOOL
AC_ARG_ENABLE(debug,[AS_HELP_STRING([--enable-debug],[Enable debugging messages.])],debug=$enableval,debug=no)
if test x$debug = xyes ; then
	AC_DEFINE(DEBUG,1,[Enable debug messages.])
fi
AM_CONDITIONAL(GCC,test x$GCC = xyes)

AC_CONFIG_HEADERS(config.h)
AC_OUTPUT([Makefile setuptool.d/Makefile po/Makefile.in])
