setuptoolddir=$(sysconfdir)/setuptool.d
setuptoold_DATA = $(setuptoold)
EXTRA_DIST = $(setuptoold)
setuptoold = \
	98netconfig \
	98system-config-authentication \
	98system-config-display \
	98system-config-keyboard \
	99authconfig \
	99kbdconfig \
	99system-config-firewall-tui \
	99mouseconfig \
	99ntsysv \
	99printconf-tui \
	99sndconfig \
	99system-config-network-tui \
	99timeconfig \
	99Xconfigurator
